--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <main>
-        <!-- <nav>
+        <nav>
             <ul>
                 <li><a href="http://"></a>link-1</li>
                 <li><a href="http://"></a>link-2</li>
@@ -72,7 +72,7 @@
 
         <div class="border-img">
 
-        </div> -->
+        </div>
         <section>
             <form action="" method="post">
                 <fieldset>
@@ -121,7 +121,14 @@
                 <input type="file" name="" id="">
                 <input type="image" src="border.jpg" alt="">
                 <input type="range" name="" id="" max="30" min="5">
-
+                <input type="number" name="" id="" >
+                <label for="country_code">Country code:</label>
+                <input type="text" id="country_code" name="country_code"
+                    pattern="[A-Za-z]{2}" title="Three letter country code">
+                <label for="phone">Enter a phone number:</label>
+                <input type="tel" id="phone" name="phone"
+                placeholder="123-45-678" value="+880"
+                pattern="[0-9]{11}">
                 <button type="submit">Submit</button>
                 <button type="reset">reset</button>
                 
